...
    }

    // MARK: - Layout

    private func setUpLayout() {
        view.backgroundColor = style.backgroundColor
        view.accessibilityIdentifier = "storyViewer.uikit.root"
        playPauseButton.accessibilityIdentifier = "storyViewer.playPauseButton"
        muteButton.accessibilityIdentifier = "storyViewer.muteButton"
        closeButton.accessibilityIdentifier = "storyViewer.closeButton"
        watchButton.accessibilityIdentifier = "storyViewer.watchButton"

        imageView.contentMode = .scaleAspectFill
...
